--- a/paginas/recursos.html
+++ b/paginas/recursos.html
@@ -49,7 +49,7 @@
             <a href="https://www.instagram.com/hacelox.vos/?hl=es-la" target="blank"><img src="../img/socialinstagram43.png" alt="instagram logo" class="instagram"></a>
             <a href="https://www.youtube.com/channel/UCbVOj-3pg3-xJnnlcd3D1iw/featured" target="blank"><img src="../img/youtubesocial3181.png" alt="youtube logo" class="youtube"></a>
             <a href="https://www.facebook.com/haceloxvos/" target="blank"><img src="../img/facebookapplicationsocialfaceboo2991.png" alt="facebook" class="facebook"></a>
-            <a href="https://wa.me/5491144406259" target="_blank"><img src="../img/whatsapp (3).png" alt="whatsapp" class="whatsapp"></a>
+            <a href="https://wa.me/5491144406259" target="_blank"><img src="../img/wts.png" alt="whatsapp" class="whatsapp"></a>
         </section>
     </footer>
 </body>
